[build-system]
requires = ["setuptools"]

[project]
name = "image_sorter"
authors = [
    {name = "Luc", email = "lucifiel1618@gmail.com"},
]
description = "Image comparison and ordering"
readme = "README.md"
requires-python = ">=3.11"
version = "2.0.0"

dependencies = [
    "imageio"
]

[project.optional-dependencies]
skimage = ["scikit-image", "opencv-python", "imutils"]
imgutils = ["dghs-imgutils"]